<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FaceCliq</string>
    <string name="hello_world">Hello world!</string>
    <string name="ActionItem1">aItem1</string>
    <string name="ActionItem2">aItem2</string>
    <string name="ActionItem3">aItem3</string>
    <string name="ActionItem4">aItem4</string>
    <string name="Section1">profile</string>
    <string name="Section2">world</string>
    <string name="Section3">camera</string>
    <string name="Section4">comment</string>
    <string name="Section5">cloud</string>
    <string name="registerHere">New to FaceCliq?</string>
    <string name="registerHere2">Create New Account!</string>
    <string name="textEmail">Email</string>
    <string name="textUser">Username</string>
    <string name="textPswd">Password</string>
    <string name="textLogin">Login</string>
    <string name="EmptyText">Enter Input</string>
    <string name="textFName">First Name</string>
    <string name="textLName">Last Name</string>
    <string name="LoginHere">Already have an account? </string>
    <string name="LoginHere2">Login here!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_account_list">AccountList</string>
    <string name="title_activity_account_authenticator_service">AccountAuthenticatorService</string>
    <string name="General_Settings">General Settings</string>
    <string name="Account_Settings">Account Settings</string>
     <string name="action_notifi">Notifications</string>
    <string name="TITLE">FaceCliq</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_overflow">Menu</string>
    <string name= "menu_search">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="submenu_item1">Support</string>
    <string name="submenu_item2">Settings</string>
    <string name="submenu_item3">Log out</string>
    <string name="StatusQuote">This is my profile status!</string>
    <string name="retry_button">Try Again</string>
    <string name="exit_button">Exit</string>
    <string-array name="drawer_array">
        <item >CliqStream</item>
        <item >My Cliq</item>
        <item >CliqTivity</item>
        <item >CliqSearch</item>
       <item >CliqTags</item>
    </string-array>
    <string name="action_refresh">refresh</string>
    <string name="action_settings">Settings</string>
</resources>
