<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/TITLE"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#8539ab"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->
        <!-- Footer Start -->

       
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/userNameLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/textUser"
                android:inputType="text"
                android:singleLine="true"
                android:textColorLink="#8904B1" />

            <EditText
                android:id="@+id/passwordLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/textPswd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorLink="#8904B1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="loginListener"
                android:text="@string/textLogin" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="registerListener"
                android:text="@string/registerHere2" />
        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>

</ScrollView>